@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'info.solidsoft.pitest' version '1.15.0'
+    id "net.ltgt.errorprone" version "4.1.0"
     id 'groovy'
 }
 
@@ -27,10 +28,17 @@ dependencies {
     implementation group: 'com.googlecode.lanterna', name:
             'lanterna', version: '3.1.1'
     testImplementation 'org.mockito:mockito-core:3.7.7'
+    errorprone "com.google.errorprone:error_prone_core:2.30.0"
 }
 
 application{
     mainClass.set("com/t05g04/game/Application")
+}
+
+pitest {
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED"]
+    targetClasses = ['com.t05g04.*']
+    junit5PluginVersion = '1.0.0'
 }
 
 test {
